--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -102,7 +102,45 @@ main {
       font-weight: bold;
       left: 22rem;
     }
+}
+
+
+// CARDS
+
+div.card {
+    width: calc((100% / 6) - 2rem);
+    margin: 1rem;
+
+    h4 {
+      text-transform: uppercase;
+      font-size: .8rem;
+      margin-top: 1rem;
+    }
+
+
+    .comic-img-container {
+      width: 18rem;
+      height: 18rem;
+      overflow: hidden;
+
+      
+      img {
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: top;
+        transition: .3s;
+
+        &:hover {
+          transform: scale(1.2);
+          filter: saturate(40%);
+        }
+      }
+    }
+
   }
+
 
 // FOOTER
 
