--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,31 +12,53 @@ header {
     align-items: center;
 
     img {
-        padding: 1.5rem 0;
+      padding: 1.5rem 0;
     }
         
-    nav ul {
+    nav {
+      width: 80%;
+
+      ul {
         list-style: none;
 
         li {
-            display: inline-block;
-            margin: 0 1rem;
-            
-            a {
-                color: $textColor;
-                font-weight: bold;
-                text-decoration: none;
-                text-transform: uppercase;
-                padding: 3.65rem 0;
+          display: inline-block;
+          position: relative;
+          margin: 0 1rem;
+          
+          a {
+            color: $textColor;
+            font-weight: bold;
+            text-decoration: none;
+            text-transform: uppercase;
+            padding: 3.9rem 0;
 
-                &:hover,
-                &.active {
-                    border-bottom: 5px solid $brandColor;
-                    color: $brandColor;
-                }
+            &:hover,
+            &.active {
+              border-bottom: 5px solid $brandColor;
+              color: $brandColor;
             }
+          }
+          
+        
+          &:nth-last-child(2)::before {
+            content: "\25BC";
+            color:$brandColor;
+            position: absolute;
+            right: -22px;
+          }
+
+          input {
+            font-size: 1.4rem;
+            outline: none;
+            border: none;
+            border-bottom: 2px solid $brandColor;
+            text-align: right;
+            padding-right: 1rem;
+          }
         }
-    }
+      }
+  }
 }
 
 // JUMBOTRON
